--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,2 +1,4 @@
 [defaults]
 inventory = inventory/my-cluster/hosts.ini  ; Adapt this to the path to your inventory file
+host_key_checking = False  ; Disable strict host key checking
+ansible_user=saltierthanyou
