--- a/inventory/my-cluster/group_vars/all.yml
+++ b/inventory/my-cluster/group_vars/all.yml
@@ -1,91 +1,61 @@
----
 k3s_version: v1.30.2+k3s2
 # this is the user that has ssh access to these machines
-ansible_user: root
+ansible_user: ansible
 systemd_dir: /etc/systemd/system
-
 # Set your timezone
 system_timezone: Europe/Berlin
-
 # interface which will be used for flannel
 flannel_iface: eth0
-
 # uncomment calico_iface to use tigera operator/calico cni instead of flannel https://docs.tigera.io/calico/latest/about
 # calico_iface: "eth0"
 calico_ebpf: false # use eBPF dataplane instead of iptables
 calico_tag: v3.28.0 # calico version tag
-
 # uncomment cilium_iface to use cilium cni instead of flannel or calico
 # ensure v4.19.57, v5.1.16, v5.2.0 or more recent kernel
 # cilium_iface: "eth0"
 cilium_mode: native # native when nodes on same subnet or using bgp, else set routed
 cilium_tag: v1.16.0 # cilium version tag
 cilium_hubble: true # enable hubble observability relay and ui
-
 # if using calico or cilium, you may specify the cluster pod cidr pool
 cluster_cidr: 10.52.0.0/16
-
 # enable cilium bgp control plane for lb services and pod cidrs. disables metallb.
 cilium_bgp: false
-
 # bgp parameters for cilium cni. only active when cilium_iface is defined and cilium_bgp is true.
 cilium_bgp_my_asn: "64513"
 cilium_bgp_peer_asn: "64512"
 cilium_bgp_peer_address: 10.3.66.1
 cilium_bgp_lb_cidr: 10.3.66.0/16 # cidr for cilium loadbalancer ipam
-
 # enable kube-vip ARP broadcasts
 kube_vip_arp: true
-
 # enable kube-vip BGP peering
 kube_vip_bgp: false
-
 # bgp parameters for kube-vip
-kube_vip_bgp_routerid: "127.0.0.1"  # Defines the router ID for the BGP server
-kube_vip_bgp_as: "64513"  # Defines the AS for the BGP server
-kube_vip_bgp_peeraddress: "10.3.66.1"  # Defines the address for the BGP peer
-kube_vip_bgp_peeras: "64512"  # Defines the AS for the BGP peer
-
+kube_vip_bgp_routerid: "127.0.0.1" # Defines the router ID for the BGP server
+kube_vip_bgp_as: "64513" # Defines the AS for the BGP server
+kube_vip_bgp_peeraddress: "10.3.66.1" # Defines the address for the BGP peer
+kube_vip_bgp_peeras: "64512" # Defines the AS for the BGP peer
 # apiserver_endpoint is virtual ip-address which will be configured on each master
 apiserver_endpoint: 10.3.66.222
-
 # k3s_token is required  masters can talk together securely
 # this token should be alpha numeric only
-k3s_token: some-SUPER-DEDEUPER-secret-password
-
+k3s_token: Gem-Waking-Tannery-Tidy-Carrousel-Fetch-Unsubtle5
 # The IP on which the node is reachable in the cluster.
 # Here, a sensible default is provided, you can still override
 # it for each of your hosts, though.
 k3s_node_ip: "{{ ansible_facts[(cilium_iface | default(calico_iface | default(flannel_iface)))]['ipv4']['address'] }}"
-
 # Disable the taint manually by setting: k3s_master_taint = false
 k3s_master_taint: "{{ true if groups['node'] | default([]) | length >= 1 else false }}"
-
 # these arguments are recommended for servers as well as agents:
 extra_args: >-
-  {{ '--flannel-iface=' + flannel_iface if calico_iface is not defined and cilium_iface is not defined else '' }}
-  --node-ip={{ k3s_node_ip }}
-
+  {{ '--flannel-iface=' + flannel_iface if calico_iface is not defined and cilium_iface is not defined else '' }} --node-ip={{ k3s_node_ip }}
 # change these to your liking, the only required are: --disable servicelb, --tls-san {{ apiserver_endpoint }}
 # the contents of the if block is also required if using calico or cilium
 extra_server_args: >-
-  {{ extra_args }}
-  {{ '--node-taint node-role.kubernetes.io/master=true:NoSchedule' if k3s_master_taint else '' }}
-  {% if calico_iface is defined or cilium_iface is defined %}
-  --flannel-backend=none
-  --disable-network-policy
-  --cluster-cidr={{ cluster_cidr | default('10.52.0.0/16') }}
-  {% endif %}
-  --tls-san {{ apiserver_endpoint }}
-  --disable servicelb
-  --disable traefik
-
+  {{ extra_args }} {{ '--node-taint node-role.kubernetes.io/master=true:NoSchedule' if k3s_master_taint else '' }} {% if calico_iface is defined or cilium_iface is defined %} --flannel-backend=none --disable-network-policy --cluster-cidr={{ cluster_cidr | default('10.52.0.0/16') }} {% endif %} --tls-san {{ apiserver_endpoint }} --disable servicelb --disable traefik
 extra_agent_args: >-
   {{ extra_args }}
-
 # image tag for kube-vip
 kube_vip_tag_version: v0.8.2
-
 # tag for kube-vip-cloud-provider manifest
 # kube_vip_cloud_provider_tag_version: "main"
 
@@ -95,10 +65,8 @@ kube_vip_tag_version: v0.8.2
 
 # metallb type frr or native
 metal_lb_type: native
-
 # metallb mode layer2 or bgp
 metal_lb_mode: layer2
-
 # bgp options
 # metal_lb_bgp_my_asn: "64513"
 # metal_lb_bgp_peer_asn: "64512"
@@ -107,10 +75,8 @@ metal_lb_mode: layer2
 # image tag for metal lb
 metal_lb_speaker_tag_version: v0.14.8
 metal_lb_controller_tag_version: v0.14.8
-
 # metallb ip range for load balancer
 metal_lb_ip_range: 10.3.66.80-10.3.66.90
-
 # Only enable if your nodes are proxmox LXC nodes, make sure to configure your proxmox nodes
 # in your hosts.ini file.
 # Please read https://gist.github.com/triangletodd/02f595cd4c0dc9aac5f7763ca2264185 before using this.
@@ -131,7 +97,6 @@ proxmox_lxc_ct_ids:
   - 202
   - 203
   - 204
-
 # Only enable this if you have set up your own container registry to act as a mirror / pull-through cache
 # (harbor / nexus / docker's official registry / etc).
 # Can be beneficial for larger dev/test environments (for example if you're getting rate limited by docker hub),
