--- a/inventory/my-cluster/hosts.ini
+++ b/inventory/my-cluster/hosts.ini
@@ -1,9 +1,12 @@
 [master]
-sylvanas
-voljin
+k3s-master-1
+k3s-master-2
+k3s-master-3
 
 [node]
-garrosh
+k3s-worker-1
+k3s-worker-2
+k3s-worker-3
 
 # only required if proxmox_lxc_configure: true
 # must contain all proxmox instances that have a master or worker node
