--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,7 @@
 {
-    "ansible.python.interpreterPath": "/home/saltierthanyou/ansible/k3s-ansible/venv/bin/python"
+    "ansible.python.interpreterPath": "/home/saltierthanyou/k3s-ansible/.venv/bin/python",
+    "workbench.colorCustomizations": {},
+    "cSpell.words": [
+        "cmdline"
+    ]
 }
